k8s/legacy-yamls/nginx-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 30443
