k8s/legacy-yamls/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port
spec:
  type: NodePort
  selector:
    app: books-catalog
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 31117
