k8s/legacy-yamls/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-internal
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx   
  type: ClusterIP
