k8s/legacy-yamls/books-catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-catalog-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: books-catalog
                port:
                  number: 8000
